--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,22 @@ a:active {
   margin-bottom: 15px;
 }
 
+.output-grid {
+  display: grid;
+  grid-template-columns: 410px auto 1fr;
+}
+
+.output-grid img {
+  margin-top: 16px;
+  height: 70vh;
+  box-shadow: 0 0 10px 0.5px #d3cfcf;
+}
+
+.info {
+  line-height: 0.2;
+  width: 400;
+}
+
 @media screen and (max-width: 770px) {
   body {
     font-size: 1rem;
