--- a/src/style.css
+++ b/src/style.css
@@ -76,6 +76,10 @@ a:active {
   width: 400;
 }
 
+.title {
+  line-height: 1;
+}
+
 @media screen and (max-width: 770px) {
   body {
     font-size: 1rem;
