--- a/src/style.css
+++ b/src/style.css
@@ -104,7 +104,7 @@ a:active {
     display: block;
   }
 
-  .grid {
+  .masonry {
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
@@ -113,7 +113,7 @@ a:active {
     /*column-gap: 32px;*/
   }
 
-  .grid-item {
+  .masonry-item {
     overflow-x: hidden;
     width: 100%;
     padding: none;
