--- a/src/style.css
+++ b/src/style.css
@@ -175,12 +175,20 @@ a:active {
     display: flex;
   }
 
+  h3 {
+    font-size: 0.8rem;
+  }
+
   body {
     font-size: 0.8rem;
     line-height: 1.05;
     overflow-x: hidden;
     padding: 2vw;
     letter-spacing: -0.007em;
+  }
+
+  a {
+    line-height: 0.02;
   }
 
   .designers {
