hide show grid toggle on about and work page

--- a/src/style.css
+++ b/src/style.css
@@ -135,6 +135,14 @@ a:active {
   transform: translateX(20%);
 }
 
+.work-page .showGrid {
+  display: none;
+}
+
+.about-page .showGrid {
+  display: none;
+}
+
 .billboard {
   width: 70%;
 }
