--- a/src/style.css
+++ b/src/style.css
@@ -87,6 +87,7 @@ a:active {
 .gallery {
   display: flex;
   height: 200px;
+  padding-right: 20px;
 }
 
 .gallery img {
@@ -247,6 +248,7 @@ a:active {
     display: flex;
     height: auto;
     flex-direction: column;
+    padding-right: none;
   }
 
   .gallery img {
